syntax = "proto3";
package rate_limit_service.v1;

option go_package = "./rate_limit_service;rate_limit_servicev1";

service Limit {
  rpc TestExecutionLimit (TestExecutionLimitReq) returns (TestExecutionLimitRes);
}

message TestExecutionLimitReq {
  string account_id = 1;
  int32 count = 2;
}

message TestExecutionLimitRes {
  bool is_limit = 1;
  int32 acc_count = 2;
}
